# home-surveillance-assistant

./: README.md  pyproject.toml  settings.json
home_surveillance_assistant/: camera_discovery.py  main.py
